jlamontSC-test/src/objects/School__c.object
<CustomObject>
    <description>Object to track Constituent schools education and attendance.</description>
    <fields>
        <fullName>Alumni__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Contact an alumni of this school?</description>
        <inlineHelpText>Is the Contact an alumni of this school?</inlineHelpText>
        <label>Alumni</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>College__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the College that was attended.</description>
        <label>College</label>
        <referenceTo>College__c</referenceTo>
        <relationshipLabel>Schools (College)</relationshipLabel>
        <relationshipName>Schools_College</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The person who has the school record ( aka the student )</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Schools</relationshipLabel>
        <relationshipName>Schools</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Graduation_Year__c</fullName>
        <description>Expected or actual year of graduation.</description>
        <label>Graduation Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the High School that was attended.</description>
        <label>High School</label>
        <referenceTo>High_School__c</referenceTo>
        <relationshipLabel>Schools (High School)</relationshipLabel>
        <relationshipName>Schools_High_School</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postsecondary_Degree__c</fullName>
        <description>Demo of a degree picklist. A sample of common degrees with a certain level of granularity.</description>
        <label>Postsecondary Degree</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Associate&apos;s Degree</fullName>
                </value>
                <value>
                    <fullName>Bachelor&apos;s Degree</fullName>
                </value>
                <value>
                    <fullName>Graduate Degree</fullName>
                </value>
                <value>
                    <fullName>Doctoral Degree</fullName>
                </value>
                <value>
                    <fullName>Juris Doctorate (J.D.)</fullName>
                </value>
                <value>
                    <fullName>Medical Doctor (M.D.)</fullName>
                </value>
                <value>
                    <fullName>Doctor of Dental Surgery (D.D.S.)</fullName>
                </value>
                <value>
                    <fullName>Doctor of Pharmacy (Pharm.D.)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_City__c</fullName>
        <description>Formula field that populates the High School/College City field</description>
        <formula>IF( 
NOT(ISNULL(College__r.City__c)) &amp;&amp; 
NOT(ISBLANK(College__r.City__c)) &amp;&amp; 
NOT(ISNULL(High_School__r.City__c)) &amp;&amp; 
NOT(ISBLANK(High_School__r.City__c)) 
,&quot;Error: Both Defined&quot;, 
IF(NOT(ISNULL(College__r.City__c))&amp;&amp; NOT(ISBLANK(College__r.City__c)),College__r.City__c, 
IF(NOT(ISNULL(High_School__r.City__c))&amp;&amp; NOT(ISBLANK(High_School__r.City__c)),High_School__r.City__c,&quot;&quot; 
) 
) 
)</formula>
        <label>School City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_State__c</fullName>
        <description>Displays the text value of the school State, regardless if HS or College</description>
        <formula>IF( 
NOT(ISNULL(College__r.State_Code__c)) &amp;&amp; 
NOT(ISBLANK(College__r.State_Code__c)) &amp;&amp; 
NOT(ISNULL(High_School__r.State__c)) &amp;&amp; 
NOT(ISBLANK(High_School__r.State__c)) 
,&quot;Error: Both Defined&quot;, 
IF(NOT(ISNULL(College__r.State_Code__c))&amp;&amp; NOT(ISBLANK(College__r.State_Code__c)),College__r.State_Code__c, 
IF(NOT(ISNULL(High_School__r.State__c))&amp;&amp; NOT(ISBLANK(High_School__r.State__c)),High_School__r.State__c,&quot;&quot; 
) 
) 
)</formula>
        <label>School State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <description>Displays the text value of the school, regardless if HS or College</description>
        <formula>IF( 
NOT(ISNULL(College__r.Name)) &amp;&amp; 
NOT(ISBLANK(College__r.Name)) &amp;&amp; 
NOT(ISNULL(High_School__r.Name)) &amp;&amp; 
NOT(ISBLANK(High_School__r.Name)) 
,&quot;Error: Both Defined&quot;, 
IF(NOT(ISNULL(College__r.Name))&amp;&amp; NOT(ISBLANK(College__r.Name)),College__r.Name, 
IF(NOT(ISNULL(High_School__r.Name))&amp;&amp; NOT(ISBLANK(High_School__r.Name)),High_School__r.Name,&quot;&quot; 
) 
) 
)</formula>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unmatched_College_Name__c</fullName>
        <description>This field stores the collected college name when it cannot be matched as part of data entry.</description>
        <inlineHelpText>This field stores a value for the college when it does not match a specific college via lookup.</inlineHelpText>
        <label>Unmatched College Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unmatched_High_School_Name__c</fullName>
        <description>This field stores the collected high school name when it cannot be matched as part of data entry.</description>
        <inlineHelpText>This field stores a value for the high school when it does not match a specific high school via lookup.</inlineHelpText>
        <label>Unmatched High School Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>School</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>School__c</columns>
        <columns>Graduation_Year__c</columns>
        <columns>Alumni__c</columns>
        <columns>Postsecondary_Degree__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Alumni</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>College__c</columns>
        <columns>High_School__c</columns>
        <columns>School__c</columns>
        <columns>Graduation_Year__c</columns>
        <columns>Postsecondary_Degree__c</columns>
        <columns>Alumni__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Alumni__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Alumni</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000000000}</displayFormat>
        <label>School Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schools</pluralLabel>
    <recordTypes>
        <fullName>College</fullName>
        <active>true</active>
        <description>College Education</description>
        <label>College</label>
    </recordTypes>
    <recordTypes>
        <fullName>High_School</fullName>
        <active>true</active>
        <description>High School Education</description>
        <label>High School</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>